// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the FavoriteButton component correctly 1`] = `
<button
  className="favorite-button"
  type="button"
>
  
</button>
`;

exports[`renders the FavoriteButton component correctly 2`] = `
<button
  className="favorite-button"
  onClick={[Function]}
  type="button"
>
  
</button>
`;

exports[`renders the FavoriteButton component correctly with props 1`] = `
<button
  className="favorite-button"
  onClick={[Function]}
  type="button"
>
  
</button>
`;
